// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="countdownContainer typographyTheme primary-medium"
      >
        Запросить повторно можно через 01:00
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_CHECKING state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer typographyTheme"
      >
        <svg
          class="spinner component size-24 visible"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id=":r0:_top"
              x1="0.05"
            >
              <stop
                offset="0.1"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="1"
                stop-color="currentColor"
                stop-opacity="0.3"
              />
            </lineargradient>
            <lineargradient
              id=":r0:_bottom"
              x1="0.05"
            >
              <stop
                offset="0"
                stop-color="currentColor"
                stop-opacity="1"
              />
              <stop
                offset="1"
                stop-color="currentColor"
                stop-opacity="0.3"
              />
            </lineargradient>
          </defs>
          <g
            stroke-width="2"
          >
            <path
              d="M3,12 A9,9 0 0 1 21,12"
              stroke="url(#:r0:_top)"
            />
            <path
              d="M21,12 A9,9 0 0 1 3,12"
              stroke="url(#:r0:_bottom)"
            />
            <path
              d="M3,12 A9,9 0 0 1 3 12"
              stroke="currentColor"
              stroke-linecap="round"
            />
          </g>
        </svg>
        <span
          class="loaderText"
        />
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_ERROR state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class="shake"
        >
          <input
            autocomplete="one-time-code"
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
        <div
          class="error"
          role="alert"
        >
          Код введён неверно
        </div>
      </div>
      <div
        class="countdownContainer typographyTheme primary-medium"
      >
        Запросить повторно можно через 01:00
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_SENDING state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer typographyTheme"
      >
        <svg
          class="spinner component size-24 visible"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id=":r1:_top"
              x1="0.05"
            >
              <stop
                offset="0.1"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="1"
                stop-color="currentColor"
                stop-opacity="0.3"
              />
            </lineargradient>
            <lineargradient
              id=":r1:_bottom"
              x1="0.05"
            >
              <stop
                offset="0"
                stop-color="currentColor"
                stop-opacity="1"
              />
              <stop
                offset="1"
                stop-color="currentColor"
                stop-opacity="0.3"
              />
            </lineargradient>
          </defs>
          <g
            stroke-width="2"
          >
            <path
              d="M3,12 A9,9 0 0 1 21,12"
              stroke="url(#:r1:_top)"
            />
            <path
              d="M21,12 A9,9 0 0 1 3,12"
              stroke="url(#:r1:_bottom)"
            />
            <path
              d="M3,12 A9,9 0 0 1 3 12"
              stroke="currentColor"
              stroke-linecap="round"
            />
          </g>
        </svg>
        <span
          class="loaderText"
        />
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with FATAL_ERROR screen 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Ввести код больше нельзя
      </h3>
      <span
        class="typographyTheme primary primary-medium"
      >
        Вы ввели код неверно более 5 раз. В целях безопасности мы ограничили дальнейший ввод.
      </span>
      <button
        class="component secondary s hug s component secondary component secondary button"
        type="button"
      >
        <span
          class="text stretchText"
        >
          Понятно
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Превышено количество попыток запроса кода
      </h3>
      <span
        class="description typographyTheme primary primary-medium"
      >
        Повторное подтверждение кодом будет возможно через 24 часа
      </span>
      <div
        class="countdownWrap typographyTheme"
      >
        <svg
          class="loader"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            class="circle"
            cx="8"
            cy="8"
            r="7"
            stroke-dasharray="43.98"
            stroke-dashoffset="0.00"
            transform="rotate(-90 8 8)"
          />
        </svg>
        24:00:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 2`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Не приходит сообщение?
      </h3>
      <span
        class="text typographyTheme primary primary-medium"
      >
        Если у вас изменился номер телефона, позвоните нам или обратитесь в любое отделение банка.
      </span>
      <div
        class="phonesWrap"
      >
        <div
          class="phoneWrap"
        >
          <a
            class="component primary withoutUnderline phoneLink"
            href="tel:+78002000000"
          >
            <span
              class="text"
            >
              8 800 200 00 00
            </span>
          </a>
          <span
            class="text typographyTheme primary primary-medium"
          >
             — для звонков по России
          </span>
        </div>
        <div
          class="phoneWrap"
        >
          <a
            class="component primary withoutUnderline phoneLink"
            href="tel:+74957888878"
          >
            <span
              class="text"
            >
              +7 495 78 888 78
            </span>
          </a>
          <span
            class="text typographyTheme primary primary-medium"
          >
             — в Москве и за границей
          </span>
        </div>
      </div>
      <span
        class="text typographyTheme primary primary-medium"
      >
        Если номер не менялся, возможно, перегружен сервис отправки сообщений. Попробуйте повторить действие через несколько минут.
      </span>
      <button
        class="component secondary s hug s component secondary component secondary hintButton"
        type="button"
      >
        <span
          class="text stretchText"
        >
          Вернуться к вводу кода
        </span>
      </button>
    </div>
  </div>
</div>
`;
